@@ -1,10 +1,13 @@
 Changes:
 - JButtonCustomizer completed
 - a text customizers sample added
+- text customizers tutorial section completed
 - org.softsmithy.lib.util.Strings.cut added
 - small sample updates
 - small documentation updates
             - Javadocs added
+- org.softsmithy.lib.io.Files: getPathNames added
+- org.softsmithy.lib.util.zip.ZipFiles: createEntryName added
 
 v20070304:  - org.softsmithy.lib.io.Files: delete recursivly added
 (Rev.: 307) - org.softsmithy.lib.io.Streams: copy streams added
